--- a/Lab1/src/index.html
+++ b/Lab1/src/index.html
@@ -56,7 +56,7 @@
                 <div class="list-group">
                    <img style = "padding: 10px 0px 10px 0px;" src={{>artworkUrl100}}>
                    <li class="list-group-item"><b>Album name: </b>{{>collectionCensoredName}}</li>
-                   <li class="list-group-item"><b>Release Date: </b>{{>releaseDate}}</li>
+                   <li class="list-group-item"><b>Release Date: </b>{{>date}}</li>
                    <li class="list-group-item"><b>Genre: </b>{{>primaryGenreName}}</li>
                    <li class="list-group-item">
                     <a href="{{>previewUrl}}">Preview audio link</a>
